--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -165,7 +165,7 @@ A variety of algorithms were tried, including:  GaussianNB, DecisionTree, SVM, S
 When tuning an algorithm in machine learning, we aim to select the best parameters in order to optimize performance. In machine learning there are automated processes which select parameters and find the best combinations or parameters. Parameter tuning is important because in machine learning, ultimately, the goal is to have an algorithm that tunes itself.  
 <br>
 Tuning or hyperparameter optimization in machine learning involves choosing a set of optimal hyperparameters for a learning algorithm. The best combination of constraints, weights or learning rates needs to be found in order to generalize different data patterns in the training data so that the models perform with high scores when run in cross-validation against the test data. 
-<br>
+<br><br>
 In this project, GridSearchCV has been used to tune the models and come up with the best combination of parameters. Other optimization methods include Bayesian optimization, Random Search, and Gradient-based optimization. Learning algorithms such as decision trees and random forests require the user to set parameters or constraints in the best way possible to get the best results in the training data. In this project, we define acceptable performance as having accuracy, precision and recall scores above 0.3.  
 
 
@@ -214,16 +214,16 @@ To validate the performance of each algorithm, accuracy, recall and precision sc
 Our model was tested with a Stratified Shuffle Split cross validation iterator in tester.py in order to create random training test sets of the data. K-Fold cross validation takes all of the labeled data and divides it into batches.  The model is then trained on K-1 batches, validated on the last batch and repeated for all permutations. Stratified K-Fold also looks at the relative distribution of the classes.  If one class or label appears more than another, stratified k-fold will represent that imbalance when it creates batches. 
 
 
-## Evaluation Metrics ##
+## Evaluation Metrics 
 Accuracy, precision and recall were used as the primary evaluation metrics. Since the overall dataset was very small, it is not likely to be a good metric to use on its own. It could be a starting point when applied to a much larger dataset.
 <br><br>
-##### Accuracy #####
+##### Accuracy 
 Accuracy is the number of correct predictions divided by the total numer of predictions. In this project, accuracy tells us how many POIs were classified correctly.
 <br>
-##### Precision #####
+##### Precision 
 In this project, a high precision score means that the algorithm correctly guesses that a person is a POI. This measures how certain we are that the person really is a POI. It correctly labels POIs (true positives) with a minimum of false positives. 
 <br><br>
-##### Recall #####
+##### Recall 
 Recall in this project measures the sensitivity of the model.  It tells us how many POIs which are correctly identified divided by the number of POIs that should have been identified. In other words, it is the ratio of the number of correctly identified POIs divided by all POIs. It is the probability that the algorithm will identify someone as a POI if they in fact are.  
 <br><br>
 Both precision and accuracy are important because a well performing algorithm must be able to correctly identify people who are actually POIs as POIs and to not incorrectly label people who are not POIs. In this project a precision and recall score above 0.3 is considered acceptable.
