--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -166,7 +166,7 @@ When tuning an algorithm in machine learning, we aim to select the best paramete
 <br>
 Tuning or hyperparameter optimization in machine learning involves choosing a set of optimal hyperparameters for a learning algorithm. The best combination of constraints, weights or learning rates needs to be found in order to generalize different data patterns in the training data so that the models perform with high scores when run in cross-validation against the test data. 
 <br><br>
-In this project, GridSearchCV has been used to tune the models and come up with the best combination of parameters. Other optimization methods include Bayesian optimization, Random Search, and Gradient-based optimization. Learning algorithms such as decision trees and random forests require the user to set parameters or constraints in the best way possible to get the best results in the training data. In this project, we define acceptable performance as having accuracy, precision and recall scores above 0.3.  
+In this project, GridSearchCV was used to tune the models and come up with the best combination of parameters. Other optimization methods include Bayesian optimization, Random Search, and Gradient-based optimization. Learning algorithms such as decision trees and random forests require the user to set parameters or constraints in the best way possible to get the best results in the training data. In this project, we define acceptable performance as having accuracy, precision and recall scores above 0.3.  
 
 
 
@@ -222,7 +222,7 @@ Accuracy is the number of correct predictions divided by the total numer of pred
 <br>
 
 In this project, a high precision score means that the algorithm correctly guesses that a person is a POI. This measures how certain we are that the person really is a POI. It correctly labels POIs (true positives) with a minimum of false positives. 
-<br>
+<br><br>
 Recall in this project measures the sensitivity of the model.  It tells us how many POIs which are correctly identified divided by the number of POIs that should have been identified. In other words, it is the ratio of the number of correctly identified POIs divided by all POIs. It is the probability that the algorithm will identify someone as a POI if they in fact are.  
 <br><br>
 Both precision and accuracy are important because a well performing algorithm must be able to correctly identify people who are actually POIs as POIs and to not incorrectly label people who are not POIs. In this project a precision and recall score above 0.3 is considered acceptable.
@@ -237,8 +237,7 @@ The opposite of overfitting is underfitting. Underfitting occurs when the model 
 <br><br>
 Cross validation is a useful way to prevent overfitting. Training data is used to generate multile mini train-test splits. These splits are used to tun the model. In standard k-fold cross validation, the algorithm on k-1 folds while using the remaining fold as the test set.
 <br><br>
-Training with more data can sometimes help algorithms to better detect the signal from the noise if the sample data size is larger and the data is clean. <br>
-Removing irrelevant features can also help to improve performance. 
+Training with more data can sometimes help algorithms to better detect the signal from the noise if the sample data size is larger and the data is clean. Removing irrelevant features can also help to improve performance. 
 
 ## References ##
 <a href=https://www.udacity.com/course/intro-to-machine-learning--ud120>Udacity - Intro to Machine Learning</a>
